<resources>
    <string name="app_name">FastNews</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Filter Preferences -->
    <string name="select_language">Select Language</string>
    <string name="select_country">Select Country</string>
    <string name="select_source">Select Source</string>
    <string name="select_max">Select Max Articles</string>
    <string name="select_sort">Newest First</string>
    <string name="select_time_after">Select Repeat Interval</string>

    <!-- Settings Screen -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="watch_later">Watch Later</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="select_language">Select Language</string>
    <string name="settings_title">Settings</string>
    <string name="notifications_section">Notifications</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="show_notifications_desc">Turn on Notifications to get notified about the latest news.</string>
    <string name="first_notification_at">1st Notification at:</string>
    <string name="first_notification_desc">This will be the 1st notification of the day.</string>
    <string name="repeat_after">Repeat After</string>
    <string name="news_preferences">News Preferences</string>
    <string name="data_section">Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete_data_desc">This will delete all news in watch later section and data related you set in settings page.</string>
    <string name="set_time">Set</string>

    <!-- Reply Preferences -->
    <string name="reply">Reply</string>
    <string name="reply_to_all">Reply to all</string>

    <!-- Language Options -->
    <string name="language_select">Select Language</string>
    <string name="language_arabic">Arabic (ar)</string>
    <string name="language_chinese">Chinese (zh)</string>
    <string name="language_dutch">Dutch (nl)</string>
    <string name="language_english">English (en)</string>
    <string name="language_french">French (fr)</string>
    <string name="language_german">German (de)</string>
    <string name="language_hebrew">Hebrew (he)</string>
    <string name="language_hindi">Hindi (hi)</string>
    <string name="language_italian">Italian (it)</string>
    <string name="language_norwegian">Norwegian (no)</string>
    <string name="language_portuguese">Portuguese (pt)</string>
    <string name="language_russian">Russian (ru)</string>
    <string name="language_spanish">Spanish (es)</string>
    <string name="language_swedish">Swedish (sv)</string>
    <string name="language_vietnamese">Vietnamese (vi)</string>

    <!-- Country Options -->
    <string name="country_select">Select Country</string>
    <string name="country_argentina">Argentina (ar)</string>
    <string name="country_australia">Australia (au)</string>
    <string name="country_austria">Austria (at)</string>
    <string name="country_belgium">Belgium (be)</string>
    <string name="country_brazil">Brazil (br)</string>
    <string name="country_bulgaria">Bulgaria (bg)</string>
    <string name="country_canada">Canada (ca)</string>
    <string name="country_china">China (cn)</string>
    <string name="country_colombia">Colombia (co)</string>
    <string name="country_cuba">Cuba (cu)</string>
    <string name="country_czech_republic">Czech Republic (cz)</string>
    <string name="country_egypt">Egypt (eg)</string>
    <string name="country_france">France (fr)</string>
    <string name="country_germany">Germany (de)</string>
    <string name="country_greece">Greece (gr)</string>
    <string name="country_hong_kong">Hong Kong (hk)</string>
    <string name="country_hungary">Hungary (hu)</string>
    <string name="country_india">India (in)</string>
    <string name="country_indonesia">Indonesia (id)</string>
    <string name="country_ireland">Ireland (ie)</string>
    <string name="country_israel">Israel (il)</string>
    <string name="country_italy">Italy (it)</string>
    <string name="country_japan">Japan (jp)</string>
    <string name="country_latvia">Latvia (lv)</string>
    <string name="country_lithuania">Lithuania (lt)</string>
    <string name="country_malaysia">Malaysia (my)</string>
    <string name="country_mexico">Mexico (mx)</string>
    <string name="country_morocco">Morocco (ma)</string>
    <string name="country_netherlands">Netherlands (nl)</string>
    <string name="country_new_zealand">New Zealand (nz)</string>
    <string name="country_nigeria">Nigeria (ng)</string>
    <string name="country_norway">Norway (no)</string>
    <string name="country_philippines">Philippines (ph)</string>
    <string name="country_poland">Poland (pl)</string>
    <string name="country_portugal">Portugal (pt)</string>
    <string name="country_romania">Romania (ro)</string>
    <string name="country_russia">Russia (ru)</string>
    <string name="country_saudi_arabia">Saudi Arabia (sa)</string>
    <string name="country_serbia">Serbia (rs)</string>
    <string name="country_singapore">Singapore (sg)</string>
    <string name="country_slovakia">Slovakia (sk)</string>
    <string name="country_slovenia">Slovenia (si)</string>
    <string name="country_south_africa">South Africa (za)</string>
    <string name="country_south_korea">South Korea (kr)</string>
    <string name="country_sweden">Sweden (se)</string>
    <string name="country_switzerland">Switzerland (ch)</string>
    <string name="country_taiwan">Taiwan (tw)</string>
    <string name="country_thailand">Thailand (th)</string>
    <string name="country_turkey">Turkey (tr)</string>
    <string name="country_uae">UAE (ae)</string>
    <string name="country_ukraine">Ukraine (ua)</string>
    <string name="country_united_kingdom">United Kingdom (gb)</string>
    <string name="country_united_states">United States (us)</string>
    <string name="country_venezuela">Venezuela (ve)</string>
    <string name="country_vietnam">Vietnam (vn)</string>

    <!-- Number Options -->
    <string name="max_articles">Max Articles</string>

    <!-- Time After Options -->
    <string name="time_24_hours">24 Hours</string>
    <string name="time_12_hours">12 Hours</string>
    <string name="time_6_hours">6 Hours</string>

    <!-- Sort By Options -->
    <string name="sort_oldest_first">Oldest First</string>
    <string name="sort_newest_first">Newest First</string>
</resources>

