<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/settings_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_below="@id/settingsText">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20sp"
            android:paddingTop="20sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/notifications_section"
                android:textColor="@color/themeColor"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginVertical="10sp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/show_notifications"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/show_notifications_desc"
                        android:textColor="@color/navColor"
                        android:textSize="12sp"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/toggleNotifications"
                    android:layout_width="70sp"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:src="@drawable/switch_off_icon"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/selectTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginVertical="10sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:minWidth="250sp">
                    <TextView
                        android:id="@+id/firstNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/first_notification_at"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/first_notification_desc"
                        android:textColor="@color/navColor"
                        android:textSize="12sp"/>
                </LinearLayout>

                <Button
                    android:id="@+id/selectTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/themeColor2"
                    android:text="00:00"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:cornerRadius="5sp"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>