<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/searchNewsLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:src="@drawable/search_news_vector"
            android:scaleType="centerCrop"
            android:visibility="visible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tìm kiếm tin tức theo từ khóa"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxWidth="350sp"
            android:text="Bạn có thể áp dụng bộ lọc theo ngôn ngữ, quốc gia và số lượng bài viết để xem kết quả."
            android:textColor="@color/black"
            android:layout_marginTop="5sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:paddingTop="20sp">

        <!-- Thanh tìm kiếm -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            app:cardBackgroundColor="#DEDEDE">

            <EditText
                android:id="@+id/searchNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/black"
                android:drawableLeft="@drawable/search_theme2"
                android:drawableRight="@drawable/settings_theme2"
                android:drawablePadding="10sp"
                android:hint="Search news by words"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingHorizontal="25sp"
                android:paddingVertical="15sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#484848"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/showResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text=" Hiển thị 10 bài viết liên quan đến:\n &quot;Donald Trump&quot;"
            android:visibility="invisible"/>

        <!-- Shimmer layout -->
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginVertical="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/shimmer_news_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30sp" />

                <include layout="@layout/shimmer_news_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30sp" />

                <include layout="@layout/shimmer_news_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30sp" />

                <include layout="@layout/shimmer_news_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30sp" />

                <include layout="@layout/shimmer_news_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30sp" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/watchLaterRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"/>
    </LinearLayout>

    <!-- Bộ lọc -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginVertical="90sp"
        android:layout_marginHorizontal="20sp"
        app:cardCornerRadius="15sp">
        <LinearLayout
            android:id="@+id/filterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#167700FF"
            android:padding="15sp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bộ lọc:"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10sp"/>

            <!-- Ngôn ngữ -->
            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/language_array"
                android:padding="10sp"
                android:layout_weight="1"
                android:background="@drawable/spinner_border"
                android:prompt="@string/select_language"/>

            <!-- Quốc gia -->
            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/country_array"
                android:background="@drawable/spinner_border"
                android:padding="10sp"
                android:layout_weight="1"
                android:layout_marginTop="10sp"
                android:prompt="@string/select_country" />

            <!-- Số bài tối đa -->
            <Spinner
                android:id="@+id/numberSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/number_array"
                android:background="@drawable/spinner_border"
                android:padding="10sp"
                android:layout_weight="1"
                android:layout_marginTop="10sp"
                android:prompt="@string/select_max" />

            <!--            <RelativeLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content">-->
            <!--                &lt;!&ndash; From Date &ndash;&gt;-->
            <!--                <LinearLayout-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:orientation="horizontal"-->
            <!--                    android:layout_marginTop="10sp">-->

            <!--                    <TextView-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:text="From:" />-->

            <!--                    <Button-->
            <!--                        android:id="@+id/fromDateButton"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="40sp"-->
            <!--                        android:backgroundTint="@color/themeColor2"-->
            <!--                        android:text="Select Date"-->
            <!--                        android:layout_marginStart="10sp"/>-->
            <!--                </LinearLayout>-->

            <!--                &lt;!&ndash; To Date &ndash;&gt;-->
            <!--                <LinearLayout-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:orientation="horizontal"-->
            <!--                    android:layout_marginTop="10sp"-->
            <!--                    android:layout_alignParentEnd="true">-->

            <!--                    <TextView-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:text="To:" />-->

            <!--                    <Button-->
            <!--                        android:id="@+id/toDateButton"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="40sp"-->
            <!--                        android:backgroundTint="@color/themeColor2"-->
            <!--                        android:text="Select Date"-->
            <!--                        android:layout_marginStart="10sp"/>-->
            <!--                </LinearLayout>-->
            <!--            </RelativeLayout>-->

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/noNewsLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:src="@drawable/no_news_found"
            android:scaleType="centerCrop"
            android:visibility="visible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Không tìm thấy tin tức"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxWidth="350sp"
            android:text="Hãy thử các bộ lọc khác"
            android:textColor="@color/black"
            android:layout_marginTop="5sp"/>
    </LinearLayout>

    <View
        android:id="@+id/dimOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:visibility="gone" />

</RelativeLayout>
